--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+
+
     <h1> Ejemplo pagina en <em>GitHub pages</em></h1>
+<p>
+    primer desarrollo 
+</p>
 </body>
+
 </html>
