--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </p>
 <p>primer arreglo</p>
 <p>arreglo 2</p>
-<p>desarrollo 2</p></body>
+<p>desarrollo 2</p>
+<p>arreglo de exp2</p>
+</body>
 
 </html>
