--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-
+<p>desarrollo principal que deja atras al bugfix</p>
     <h1> Ejemplo pagina en <em>GitHub pages</em></h1>
 <p>
     primer desarrollo 
